--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -607,92 +607,103 @@ only screen and (min-resolution: 1.3dppx) {
     background: url("images/hero-pattern.png"), -webkit-linear-gradient(-450deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), center no-repeat rgba(0, 0, 0, 0.1) scroll;
     background: url("images/hero-pattern.png"), linear-gradient(180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), center no-repeat rgba(0, 0, 0, 0.1) scroll;
 }
+
+
+/**
+ * Sub Navigation
+ */
+
+.padding {
+    padding-top: 60px;
+}
+
+/*
 .process-labs .sub-navigation {
     background: #3bc999;
 }
-.sub-navigation {
-    background: #e64d49;
-    z-index: 999;
+*/
+
+.sub-navigation-container {
+    height: 60px;
 }
+
+.sub-navigation {
+    background: #fff;
+    z-index: 999;
+    border-bottom: 1px solid #dfdfdf;
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.15);
+    position: relative;
+    top: 60px;
+}
+
+.sub-navigation.is-fixed {
+    position: fixed;
+    margin-top: 0;
+    width: 100%;
+    top: 0;
+}
+
 .sub-navigation.fixed {
     left: 0;
     position: fixed;
     right: 0;
     top: 0;
 }
+
 .sub-navigation .sub-navigation-inner {
     max-width: 1140px;
     margin-left: auto;
     margin-right: auto;
     height: 60px;
 }
+
 .sub-navigation .sub-navigation-inner::after {
     clear: both;
     content: "";
     display: table;
 }
+
 .sub-navigation nav {
     float: left;
     width: 100%;
 }
-@media screen and (min-width: 53.75rem) {
-    .sub-navigation nav {
-        width: 40%;
-    }
-}
+
 .sub-navigation nav ul {
     margin: 0;
     padding: 0;
 }
+
 .sub-navigation nav ul::after {
     clear: both;
     content: "";
     display: table;
 }
+
 .sub-navigation nav ul li {
     float: left;
     list-style: none;
 }
+
 .sub-navigation nav ul li a {
-    color: #fff;
+    color: #3e3e3e;
     display: inline-block;
     padding: 0 1.25rem;
     line-height: 60px;
     transition: all .4s ease-in-out;
 }
-.sub-navigation nav ul li a:hover {
-    background: rgba(0, 0, 0, 0.2);
+
+.sub-navigation a:hover,
+.sub-navigation .active a {
+    color: #e64d49;
 }
-.sub-navigation nav ul li.active a {
-    background: rgba(0, 0, 0, 0.2);
-}
-.sub-navigation .sub-nav-newsletter {
-    display: none;
-    float: right;
-    text-align: right;
-    width: 60%;
-}
+
 @media screen and (min-width: 53.75rem) {
-    .sub-navigation .sub-nav-newsletter {
-        display: block;
+    .sub-navigation nav {
+        width: 40%;
     }
 }
-.sub-navigation .sub-nav-newsletter label {
-    color: #fff;
-    font-size: 15px;
-    margin-right: 0.625rem;
-}
-.sub-navigation .sub-nav-newsletter input[type="email"] {
-    background-image: url("images/icons/icon-email.svg");
-    font-size: 15px;
-    width: 15.125rem;
-}
-.sub-navigation .sub-nav-newsletter input[type="submit"] {
-    background: #3e3e3e;
-    color: #fff;
-    font-size: 14px;
-    width: 6.25rem;
-}
+
+
 .about-culture .bottom-container {
     background: #e64d49;
 }
