--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -722,6 +722,11 @@ only screen and (min-resolution: 1.3dppx) {
     margin-right: auto;
     padding: 3.5rem 1.25rem;
 }
+
+.container--follow {
+    padding-top: 0 !important;
+}
+
 @media screen and (min-width: 40rem) {
     .container {
         padding: 5rem 1.25rem;
